tests/ui/traits/next-solver/transmute-from-inference-var-issue-151314.stderr
error[E0283]: type annotations needed
  --> $DIR/transmute-from-inference-var-issue-151314.rs:14:5
   |
LL |     assert_transmutable()
   |     ^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `assert_transmutable`
   |
   = note: cannot satisfy `(): TransmuteFrom<_, Assume { alignment: false, lifetimes: false, safety: false, validity: false }>`
note: required by a bound in `assert_transmutable`
  --> $DIR/transmute-from-inference-var-issue-151314.rs:9:9
   |
LL | fn assert_transmutable<T>()
   |    ------------------- required by a bound in this function
LL | where
LL |     (): std::mem::TransmuteFrom<T>,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_transmutable`
help: consider specifying a concrete type for the type parameter `T`
   |
LL |     assert_transmutable::</* Type */>()
   |                        ++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
